@@ -13,6 +13,7 @@ Added another toy ZXLife to a new menu Procrastinate
 Added compilation os release info, running os info
 Added rom file selection for any machine you select, rom file is saved on configuration
 Added Ascii Table window
+Added Creator Info to ZSF snapshots
 
 Improved AY Player:
 - Added playlist
